Make tools behave like workflows in respect to versions
