# dockstore-webservice/src/main/resources/openapi3/openapi.yaml
@@ -216,6 +216,11 @@ components:
             $ref: '#/components/schemas/User'
           type: array
           uniqueItems: true
+        workflowVersions:
+          items:
+            $ref: '#/components/schemas/Version'
+          type: array
+          uniqueItems: true
       type: object
     Event:
       properties:
@@ -686,11 +691,6 @@ components:
             $ref: '#/components/schemas/User'
           type: array
           uniqueItems: true
-        tags:
-          items:
-            $ref: '#/components/schemas/Tag'
-          type: array
-          uniqueItems: true
         tool_maintainer_email:
           type: string
         tool_path:
@@ -703,6 +703,11 @@ components:
         users:
           items:
             $ref: '#/components/schemas/User'
+          type: array
+          uniqueItems: true
+        workflowVersions:
+          items:
+            $ref: '#/components/schemas/Tag'
           type: array
           uniqueItems: true
       type: object
@@ -785,6 +790,71 @@ components:
           type: string
         verify:
           type: boolean
+      type: object
+    Version:
+      properties:
+        commitID:
+          type: string
+        dirtyBit:
+          type: boolean
+        doiStatus:
+          enum:
+          - NOT_REQUESTED
+          - REQUESTED
+          - CREATED
+          type: string
+        doiURL:
+          type: string
+        hidden:
+          type: boolean
+        id:
+          format: int64
+          type: integer
+        input_file_formats:
+          items:
+            $ref: '#/components/schemas/FileFormat'
+          type: array
+          uniqueItems: true
+        last_modified:
+          format: date-time
+          type: string
+        name:
+          type: string
+        output_file_formats:
+          items:
+            $ref: '#/components/schemas/FileFormat'
+          type: array
+          uniqueItems: true
+        reference:
+          type: string
+        referenceType:
+          enum:
+          - COMMIT
+          - TAG
+          - BRANCH
+          - NOT_APPLICABLE
+          - UNSET
+          type: string
+        sourceFiles:
+          items:
+            $ref: '#/components/schemas/SourceFile'
+          type: array
+          uniqueItems: true
+        valid:
+          type: boolean
+        validations:
+          items:
+            $ref: '#/components/schemas/Validation'
+          type: array
+          uniqueItems: true
+        verified:
+          type: boolean
+        verifiedSource:
+          type: string
+        versionEditor:
+          $ref: '#/components/schemas/User'
+        workingDirectory:
+          type: string
       type: object
     Workflow:
       discriminator:
@@ -3153,7 +3223,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Collection'
+                $ref: '#/components/schemas/Aliasable'
           description: default response
   /organizations/name/{name}:
     get:
@@ -3259,7 +3329,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Aliasable'
+                $ref: '#/components/schemas/Organization'
           description: default response
   /organizations/{organizationId}/approve:
     post:
